WIP dask trench segmentation.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180714 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180714 Trench segmentation.ipynb
@@ -31,7 +31,7 @@
     "from tqdm import tnrange, tqdm, tqdm_notebook\n",
     "import warnings\n",
     "from functools import partial\n",
-    "from cytoolz import compose, get_in\n",
+    "from cytoolz import *\n",
     "from operator import getitem\n",
     "import nd2reader\n",
     "from importlib import reload\n",
@@ -193,7 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_frames, metadata, parsed_metadata = workflow.get_nd2_frame_list(nd2_filenames)"
+    "all_frames, metadata, parsed_metadata = workflow.get_nd2_frame_list(nd2_filenames)\n",
+    "image_limits = workflow.get_filename_image_limits(metadata)"
    ]
   },
   {
@@ -210,14 +211,15 @@
    "outputs": [],
    "source": [
     "def do_reload():\n",
-    "    from importlib import reload\n",
-    "    import util, trench_detection, diagnostics, workflow, image\n",
+    "    import trench_segmentation.watershed\n",
     "\n",
-    "    reload(util)\n",
-    "    reload(trench_detection)\n",
-    "    reload(diagnostics)\n",
-    "    reload(workflow)\n",
-    "    reload(image)\n",
+    "    # from importlib import reload\n",
+    "    # import util, trench_detection, diagnostics, workflow, image\n",
+    "    # reload(util)\n",
+    "    # reload(trench_detection)\n",
+    "    # reload(diagnostics)\n",
+    "    # reload(workflow)\n",
+    "    # reload(image)\n",
     "\n",
     "\n",
     "client.run(do_reload)\n",
@@ -467,6 +469,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frame_stream.event(_df=selected.index.to_frame(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "trench_points_good = trench_points[~util.multi_join(trench_points.index, bad_pitch)]"
    ]
@@ -487,7 +498,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "image_limits = workflow.get_filename_image_limits(metadata)\n",
     "trench_bbox_futures = []\n",
     "for _, trenches in trench_points_good.groupby([\"filename\", \"position\"]):\n",
     "    trench_bbox_futures.append(\n",
@@ -520,15 +530,6 @@
    "source": [
     "%%time\n",
     "%store trench_bboxes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_stream.event(_df=selected.index.to_frame(index=False))"
    ]
   },
   {
@@ -615,8 +616,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_trenches = trench_points_good.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\", :3, [\"MCHERRY\"], 0, :, :], :\n",
+    "selected_trenches = trench_bboxes.loc[\n",
+    "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\", :30, [\"MCHERRY\"], 0, :, :]\n",
     "]"
    ]
   },
@@ -626,9 +627,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "selected_trench_bboxes = workflow.get_trench_bboxes(\n",
-    "    selected_trenches, workflow.get_filename_image_limits(metadata)\n",
+    "len(trench_bboxes) / len(selected_trenches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_frames_future = client.scatter(all_frames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_stacks_futures = {}\n",
+    "for frame_idx, trenches in util.iter_index(\n",
+    "    selected_trenches.groupby([\"filename\", \"position\"])\n",
+    "):\n",
+    "    frame_stacks_futures[frame_idx] = client.submit(\n",
+    "        workflow.get_trench_stacks, trenches, all_frames_future, image_limits\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_segment_trench(trench_stack):\n",
+    "    import trench_segmentation.watershed\n",
+    "\n",
+    "    seg = np.stack(\n",
+    "        [trench_segmentation.watershed.segment_trench(img) for img in img_stack]\n",
+    "    )\n",
+    "    return zarr.array(\n",
+    "        a,\n",
+    "        compressor=Blosc(cname=\"zstd\", clevel=5, shuffle=Blosc.NOSHUFFLE, blocksize=0),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_segs_futures = valmap(\n",
+    "    partial(client.submit, partial(valmap, do_segment_trench)), frame_stacks_futures\n",
     ")"
    ]
   },
@@ -638,8 +689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "selected_trenches = pd.concat([selected_trenches, selected_trench_bboxes], axis=1)"
+    "# cytoolz.merge to merge"
    ]
   },
   {
@@ -648,7 +698,129 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_trenches.head()"
+    "selected_trenches_yfp = selected_trenches.rename(\n",
+    "    index={\"MCHERRY\": \"YFP\"}, level=\"channel\", copy=False\n",
+    ")\n",
+    "frame_stacks_yfp_futures = {}\n",
+    "for frame_idx, trenches in util.iter_index(\n",
+    "    selected_trenches_yfp.groupby([\"filename\", \"position\"])\n",
+    "):\n",
+    "    frame_stacks_yfp_futures[frame_idx] = client.submit(\n",
+    "        merge,\n",
+    "        [\n",
+    "            frame_stacks_futures[frame_idx],\n",
+    "            client.submit(\n",
+    "                workflow.get_trench_stacks, trenches, all_frames_future, image_limits\n",
+    "            ),\n",
+    "        ],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(frame_segs_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.gather(util.get_one(frame_segs_futures))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zarr.array(\n",
+    "    a, compressor=Blosc(cname=\"zstd\", clevel=5, shuffle=Blosc.NOSHUFFLE, blocksize=0)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hhh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame0_stacks = client.gather(util.get_one(trench_stack_futures))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_stack = util.get_one(frame0_stacks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.stack([trench_segmentation.watershed.segment_trench(img) for img in img_stack])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numcodecs import Blosc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hhh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trench_bbox_results = util.apply_map_futures(\n",
+    "    client.gather, trench_bbox_futures, predicate=lambda x: x.status == \"finished\"\n",
+    ")\n",
+    "trench_bboxes = pd.concat(\n",
+    "    [trench_points_good, pd.concat(trench_bbox_results, axis=0)], axis=1\n",
+    ")"
    ]
   },
   {
