Fixed weird issue where sometimes ND2 position information was stored under ppNextLevelEx and sometimes not.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180715 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180715 Trench segmentation.ipynb
@@ -633,9 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_trenches_segmarker = trench_bboxes.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\", :30, [\"MCHERRY\"], 0, :, :]\n",
-    "]\n",
+    "selected_trenches_segmarker = trench_bboxes.loc[IDX[:, :10, [\"MCHERRY\"], 0, :, :], :]\n",
     "selected_trenches_index = next(iter(selected_trenches_segmarker.groupby(\"t\")))[\n",
     "    1\n",
     "].index.droplevel(\"t\")"
@@ -648,61 +646,6 @@
    "outputs": [],
    "source": [
     "len(trench_bboxes) / len(selected_trenches_segmarker)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(selected_trenches_segmarker) / 30"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_bboxes.index.names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_bboxes.index.levels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(trench_bboxes) / 3408"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "trench_bboxes2 = trench_bboxes.sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(trench_bboxes) / len(trench_bboxes.loc[IDX[:, :30, [\"MCHERRY\"], 0], :])"
    ]
   },
   {
@@ -733,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_frames_future = client.scatter(all_frames)"
+    "[all_frames_future] = client.scatter([all_frames], broadcast=True)"
    ]
   },
   {
@@ -744,7 +687,7 @@
    "source": [
     "frame_stacks_futures = {}\n",
     "for frame_idx, trenches in util.iter_index(\n",
-    "    selected_trenches.groupby([\"filename\", \"position\"])\n",
+    "    selected_trenches_all.groupby([\"filename\", \"position\"])\n",
     "):\n",
     "    frame_stacks_futures[frame_idx] = client.submit(\n",
     "        workflow.get_trench_stacks, trenches, all_frames_future, image_limits\n",
@@ -757,11 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "util.apply_map_futures(\n",
-    "    lambda x: client.cancel(x),\n",
-    "    frame_stacks_futures,\n",
-    "    predicate=lambda x: x.status == \"error\",\n",
-    ")"
+    "client.cancel(frame_stacks_futures)"
    ]
   },
   {
@@ -770,7 +709,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "util.get_one(client.gather(util.get_one(frame_stacks_futures)).keys())"
+    "util.apply_map_futures(\n",
+    "    client.gather, frame_stacks_futures, predicate=lambda x: x.status == \"error\"\n",
+    ")"
    ]
   },
   {
@@ -798,10 +739,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def map_trenchwise(func, frame_stacks, trenches):\n",
+    "# def map_trenchwise(func, frame_stacks, trenches):\n",
+    "#     results = {}\n",
+    "#     for trench_idx, _ in util.iter_index(trenches):\n",
+    "#         results[trench_idx] = func(frame_stacks[trench_idx])\n",
+    "#     return results\n",
+    "\n",
+    "\n",
+    "def map_trenchwise(func, frame_stacks, trenches, channels=None):\n",
     "    results = {}\n",
     "    for trench_idx, _ in util.iter_index(trenches):\n",
-    "        results[trench_idx] = func(frame_stacks[trench_idx])\n",
+    "        if channels is None:\n",
+    "            results[trench_idx] = func(frame_stacks[trench_idx])\n",
+    "        else:\n",
+    "            results[trench_idx] = func(\n",
+    "                frame_stacks[trench_idx],\n",
+    "                *[\n",
+    "                    frame_stacks[trench_idx._replace(channel=channel)]\n",
+    "                    for channel in channels\n",
+    "                ],\n",
+    "            )\n",
     "    return results"
    ]
   },
@@ -829,9 +786,188 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.cancel(frame_segs_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_regionprops(seg_stack, reporter_stack):\n",
+    "    import skimage.measure\n",
+    "\n",
+    "    results = []\n",
+    "    for i in range(seg_stack.shape[0]):\n",
+    "        results.append(skimage.measure.regionprops(seg_stack[i], reporter_stack[i]))\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_frame_stacks = util.get_one(frame_stacks_futures).result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_frame_stacks2 = workflow.get_trench_stacks(\n",
+    "    selected_trenches_all.xs(\n",
+    "        (\"/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2\", 0), drop_level=False\n",
+    "    ),\n",
+    "    all_frames,\n",
+    "    image_limits,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_key = util.get_one(_frame_stacks.keys())\n",
+    "_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_seg_masks = util.get_one(frame_segs_futures).result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.get_one(_seg_masks.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_rps = compute_regionprops(\n",
+    "    _seg_masks[_key], _frame_stacks[_key]\n",
+    ")  # , _frame_stacks[_key._replace(channel='YFP')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_rp0 = _rps[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_rp0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "partial(map_trenchwise, compute_regionprops, channels=[\"YFP\"])(_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_regionprops_futures = {}\n",
+    "for frame_idx, trenches in util.iter_index(\n",
+    "    selected_trenches_index.to_series().groupby([\"filename\", \"position\"])\n",
+    "):\n",
+    "    frame_regionprops_futures[frame_idx] = client.submit(\n",
+    "        partial(map_trenchwise, compute_regionprops, channels=[\"YFP\"]),\n",
+    "        frame_stacks_futures[frame_idx],\n",
+    "        trenches,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(frame_regionprops_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_regionprops = util.apply_map_futures(\n",
+    "    client.gather, frame_regionprops_futures, predicate=lambda x: x.status == \"error\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "frame_segs = util.apply_map_futures(\n",
     "    client.gather, frame_segs_futures, predicate=lambda x: x.status == \"finished\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pysize.get_size(frame_segs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(frame_segs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "%store frame_segs"
    ]
   },
   {
@@ -849,7 +985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(a[50])"
+    "plt.imshow(a[0])"
    ]
   },
   {
