WIP rho offsets.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180718 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180718 Trench segmentation.ipynb
@@ -621,7 +621,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame_rot = skimage.transform.rotate(frame, 32)"
+    "# frame_rot = skimage.transform.rotate(frame, 32)\n",
+    "frame_rot = skimage.transform.rotate(frame, 30)"
    ]
   },
   {
@@ -633,6 +634,15 @@
     "tp, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
     "    frame_rot\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag, \"label_1\")"
    ]
   },
   {
