WIP trench detection using peakfinder rhos works.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180718 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180718 Trench segmentation.ipynb
@@ -642,16 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag, \"label_1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_plot_browser(diag, \"label_1.find_trench_lines.hough_1\")"
+    "ui.show_plot_browser(diag, \"label_1.find_trench_ends\")"
    ]
   },
   {
