find_periodic_peaks refinement seems to work.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
@@ -642,7 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag, \"label_1.find_trench_ends\")"
+    "ui.show_plot_browser(diag, \"label_1\")"
    ]
   },
   {
