WIP punted on interpolation, but otherwise new trench detection seems to work well. Increased default threshold in find_trench_ends from 0.8 to 0.95, works better for sparse loading.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
@@ -642,7 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag, \"label_1\")"
+    "ui.show_plot_browser(diag)"
    ]
   },
   {
