--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -14,6 +14,8 @@ fine-tune trench positions using peakfinder
 
 get bboxes for non-good trenches, then subset to good frames
 
+fix intermittent trench detection clustering issues
+
 dask segment and bring back to calculate regionprops
 dask segment and regionprops remotely
 
