WIP checkpoint before fixing trench detection out of bounds.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
@@ -18,7 +18,8 @@
     "import zarr\n",
     "import dask\n",
     "from dask import delayed\n",
-    "from dask.distributed import Client, LocalCluster, progress\n",
+    "import distributed\n",
+    "from distributed import Client, LocalCluster, progress\n",
     "from dask_jobqueue import SLURMCluster\n",
     "import streamz\n",
     "import holoviews as hv\n",
@@ -121,7 +122,7 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"00:10:00\",\n",
+    "    walltime=\"01:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
@@ -151,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# client = Client()"
+    "cluster.stop_jobs(cluster.running_jobs.keys())"
    ]
   },
   {
@@ -160,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.stop_workers(cluster.jobs)"
+    "# client = Client()"
    ]
   },
   {
@@ -255,65 +256,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Frame quality finding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "radial_psd2 = compose(image.radial_profile, image.psd2)\n",
-    "frame_psd2s_futures = {\n",
-    "    idx: client.submit(\n",
-    "        radial_psd2, client.submit(workflow._get_nd2_frame, **idx._asdict())\n",
-    "    )\n",
-    "    for idx, row in util.iter_index(frames_to_process)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_psd2s = client.gather(frame_psd2s_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FrameStream = ui.DataframeStream.define(\n",
-    "    \"FrameStream\", frames_to_process.index.to_frame(index=False)\n",
-    ")\n",
-    "frame_stream = FrameStream()\n",
-    "\n",
-    "box = ui.dataframe_browser(frame_stream)\n",
-    "frame_stream.event()\n",
-    "box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%opts Layout [shared_axes=False]\n",
-    "dict_viewer(\n",
-    "    frame_psd2s, frame_stream, wrapper=lambda k, v: hv.Curve(np.log(v))\n",
-    ") + ui.image_viewer(frame_stream)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Run trench finding"
    ]
   },
@@ -333,6 +275,111 @@
     "    )\n",
     "    for idx, row in util.iter_index(frames_to_process)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import distributed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ac = distributed.as_completed(trench_info_futures.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(trench_info_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections.abc import Mapping, Sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def as_completed(obj, with_results=True):\n",
+    "    if isinstance(obj, Mapping):\n",
+    "        futures = obj.values()\n",
+    "        dask_to_keys = {future.key: k for k, future in obj.items()}\n",
+    "    else:\n",
+    "        raise NotImplementedError\n",
+    "    for res in distributed.as_completed(futures, with_results=with_results):\n",
+    "        if with_results:\n",
+    "            future, result = res\n",
+    "            yield dask_to_keys[future.key], future, result\n",
+    "        else:\n",
+    "            future = res\n",
+    "            yield dask_to_keys[future.key], future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = []\n",
+    "for key, fut, res in as_completed(trench_info_futures):\n",
+    "    d.append((key, res))\n",
+    "    client.cancel(fut)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ac.next_batch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_info = []"
    ]
   },
   {
@@ -382,6 +429,15 @@
    "outputs": [],
    "source": [
     "len(trench_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(errs)"
    ]
   },
   {
@@ -622,7 +678,7 @@
    "outputs": [],
    "source": [
     "# frame_rot = skimage.transform.rotate(frame, 32)\n",
-    "frame_rot = skimage.transform.rotate(frame, 30)"
+    "frame_rot = skimage.transform.rotate(frame, 0)"
    ]
   },
   {
